--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "url": "https://github.com/joinpursuit/express-fitness/issues"
   },
   "homepage": "https://github.com/joinpursuit/express-fitness#readme",
-  "dependencies": {
+  "dependencies": {  
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "jest": "^28.1.0",
