--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Awesome fitness place.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "jest **/*.test.js"
   },
   "repository": {
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/joinpursuit/express-fitness#readme",
   "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "jest": "^28.1.0",
