--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest **/*.test.js"
+    "test": "jest **/*.test.js",
+    "dev" : "nodemon ./app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/joinpursuit/express-fitness#readme",
   "dependencies": {
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^28.1.0",
